@@ -17,6 +17,7 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+socket/request.c: Properly check "setup spellmon" settings.
 socket/request.c, doc/Developers/protocol: Properly check "setup sound"
  settings; document allowed values.
 socket/request.c: Properly check input read from client socket.
